--- a/articles/asc-for-iot/index.yml
+++ b/articles/asc-for-iot/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: mlottner
   ms.author: mlottner
   ms.date: 07/15/2020
-  ms.openlocfilehash: 6ffdfab3f5c29a21fb504fb8d7e5004dab1f57b1
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: 6047b647641033af415be86d8534bda9c857b608
+  ms.sourcegitcommit: d8b8768d62672e9c287a04f2578383d0eb857950
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87045993"
+  ms.lasthandoff: 08/11/2020
+  ms.locfileid: "88067301"
 landingContent:
 - title: 关于适用于 IoT 的 Azure 安全中心
   linkLists:
@@ -58,6 +58,8 @@ landingContent:
       url: quickstart-create-security-twin.md
     - text: 创建自定义安全警报
       url: quickstart-create-custom-alerts.md
+    - text: 调查安全警报
+      url: quickstart-investigate-security-alerts.md
 - title: 自定义解决方案
   linkLists:
   - linkListType: how-to-guide
