--- a/articles/azure-sql/database/index.yml
+++ b/articles/azure-sql/database/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 05/27/2020
-  ms.openlocfilehash: 0faf1311e3a570028884f826b7d8b4ff3cd5e9e2
-  ms.sourcegitcommit: 053e5e7103ab666454faf26ed51b0dfcd7661996
+  ms.openlocfilehash: 79c834ba1b4e120595f032517835aa3d119088d9
+  ms.sourcegitcommit: 1aef4235aec3fd326ded18df7fdb750883809ae8
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "84023817"
+  ms.lasthandoff: 08/12/2020
+  ms.locfileid: "88135974"
 landingContent:
 - title: Azure SQL 数据库
   linkLists:
@@ -102,11 +102,11 @@ landingContent:
   - linkListType: deploy
     links:
     - text: Azure CLI 示例
-      url: /sql/ssms/download-sql-server-management-studio-ssms
+      url: az-cli-script-samples-content-guide.md
     - text: PowerShell 示例
-      url: /sql/ssms/download-sql-server-management-studio-ssms
+      url: powershell-script-content-guide.md
     - text: ARM 模板示例
-      url: /sql/ssms/download-sql-server-management-studio-ssms
+      url: arm-templates-content-guide.md
   - linkListType: download
     links:
     - text: SQL Server Management Studio (SSMS)
