--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -11,7 +11,11 @@
           expanded: true
           items:
             - name: 设置 - Azure 门户
-              href: data-box-quickstart-portal.md
+              items:
+                - name: 导入
+                  href: data-box-quickstart-portal.md
+                - name: 用于导出
+                  href: data-box-quickstart-export.md
         - name: 教程
           items:
             - name: 将数据导入 Azure
