--- a/articles/healthcare-apis/index.yml
+++ b/articles/healthcare-apis/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: matjazl
   ms.author: matjazl
-  ms.date: 08/06/2020
-  ms.openlocfilehash: 24f509c4ee2475842486fe6e11f98860b14a43d7
-  ms.sourcegitcommit: 4e5560887b8f10539d7564eedaff4316adb27e2c
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 66fc6223a50a062631a74e62e32e0e67c7d6ba73
+  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/06/2020
-  ms.locfileid: "87901668"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88167481"
 landingContent:
 - title: Azure API for FHIR 入门
   linkLists:
@@ -41,6 +41,8 @@ landingContent:
       url: access-fhir-postman-tutorial.md
     - text: 智能集成来获取第三方应用和病历卡
       url: use-smart-on-fhir-proxy.md
+    - text: 通过 Azure IoT 中心接收设备数据
+      url: device-data-through-iot-hub.md
 - title: 注册应用进行 AD 身份验证
   linkLists:
   - linkListType: how-to-guide
