--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: 92e2269c0ef0a6b0e8f0f0676ef76359dffe83dd
-  ms.sourcegitcommit: bfeae16fa5db56c1ec1fe75e0597d8194522b396
+  ms.openlocfilehash: fee76e6782fb01c6d18fd19c8c97d9f2c310c7ab
+  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/10/2020
-  ms.locfileid: "88034815"
+  ms.lasthandoff: 08/11/2020
+  ms.locfileid: "88080671"
 highlightedContent:
   items:
   - title: 什么是 IoT Central？
@@ -91,6 +91,8 @@ productDirectory:
       url: ./retail/tutorial-iot-central-connected-logistics.md
     - text: 创建数字分发中心应用程序
       url: ./retail/tutorial-iot-central-digital-distribution-center.md
+    - text: 创建视频分析应用程序
+      url: ./retail/tutorial-video-analytics-create-app.md
   - title: 为医疗保健业生成
     imageSrc: ./healthcare/media/index/iot-central-healthcare.svg
     links:
