--- a/articles/iot-central/retail/index.yml
+++ b/articles/iot-central/retail/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: 57cc81eb1177426edf9d0ddac3b5ec4999325b84
-  ms.sourcegitcommit: 46f8457ccb224eb000799ec81ed5b3ea93a6f06f
+  ms.openlocfilehash: f37f876db15e2722907669cd1c1d8390f771034b
+  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "87337562"
+  ms.lasthandoff: 08/11/2020
+  ms.locfileid: "88080637"
 landingContent:
 - title: 生成零售解决方案
   linkLists:
@@ -37,6 +37,8 @@ landingContent:
       url: tutorial-iot-central-connected-logistics.md
     - text: 创建数字分发中心应用程序
       url: tutorial-iot-central-digital-distribution-center.md
+    - text: 创建视频分析应用程序
+      url: tutorial-video-analytics-create-app.md
   - linkListType: how-to-guide
     links:
     - text: 连接 Rigado Cascade 500
