--- a/articles/virtual-machines/troubleshooting/index.yml
+++ b/articles/virtual-machines/troubleshooting/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: 1b70dfb508ef00f370f0a6fa1456ab7178ec0eae
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: ca49aafcfa4911c97cff4a9187184ba420cd76da
+  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87069046"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88168246"
 landingContent:
 - title: 排查部署失败问题
   linkLists:
@@ -86,7 +86,7 @@ landingContent:
     - text: 启动配置更新错误
       url: ./troubleshoot-vm-boot-configure-update.md
     - text: VM 生命周期和状态
-      url: ../windows/states-lifecycle.md
+      url: ../states-lifecycle.md
 - title: VM 意外重启
   linkLists:
   - linkListType: how-to-guide
