--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -488,6 +488,22 @@ groups:
     title: Java
   - id: programming-language-python
     title: Python
+- id: app-service-platform-windows-linux
+  title: 应用服务平台
+  prompt: 选择托管平台
+  pivots:
+  - id: platform-linux
+    title: Linux
+  - id: platform-windows
+    title: Windows
+- id: app-service-containers-windows-linux
+  title: 应用服务与自定义容器
+  prompt: 选择自定义容器平台
+  pivots:
+  - id: container-linux
+    title: Linux 容器
+  - id: container-windows
+    title: Windows 容器
 - id: aml-control-methods
   title: Azure 机器学习控制平面
   prompt: 选择 Azure 机器学习控制平面接口
@@ -497,9 +513,9 @@ groups:
   - id: cli
     title: Azure CLI
 metadata:
-  ms.openlocfilehash: a16cb06637b777259e4e5115beb1299e8ed65a6b
-  ms.sourcegitcommit: 8def3249f2c216d7b9d96b154eb096640221b6b9
+  ms.openlocfilehash: ea0c191d392c23aa876f794b092fc8b019c44fa7
+  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/03/2020
-  ms.locfileid: "87543514"
+  ms.lasthandoff: 08/11/2020
+  ms.locfileid: "88079784"
