--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -109,6 +109,8 @@
       href: howto-labels-aspnet-core.md
     - name: 导入或导出配置数据
       href: howto-import-export-data.md
+    - name: 对键值使用 JSON 内容类型
+      href: howto-leverage-json-content-type.md
     - name: 将事件路由到自定义终结点
       href: howto-app-configuration-event.md
     - name: 自动备份配置存储
