--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -196,7 +196,21 @@
               href: app/pricing.md
             - name: 日志数据使用情况和成本
               href: platform/manage-cost-storage.md
-        - name: Log Analytics 工作区
+    - name: 平台日志
+      items:
+        - name: 概述
+          displayName: 'Platform logs, Resource logs, Activity log'
+          href: platform/platform-logs-overview.md
+        - name: 活动日志
+          href: platform/activity-log.md
+        - name: 资源日志
+          href: platform/resource-logs.md
+        - name: 诊断设置
+          displayName: 'Platform logs, Resource logs, Activity log'
+          href: platform/diagnostic-settings.md
+    - name: Log Analytics
+      items:
+        - name: 工作区
           items:
             - name: 设计工作区部署
               href: platform/design-logs-deployment.md
@@ -218,119 +232,6 @@
               href: platform/service-providers.md
             - name: 管理访问权限
               href: platform/manage-access.md
-        - name: 虚拟机代理
-          items:
-            - name: 概述
-              href: platform/agents-overview.md
-            - name: 常见问题解答
-              href: faq.md#agents
-            - name: Azure 诊断扩展
-              items:
-                - name: 概述
-                  href: platform/diagnostics-extension-overview.md
-                - name: Windows
-                  displayname: diagnostics extension
-                  items:
-                    - name: 安装和配置
-                      items:
-                        - name: 安装选项
-                          href: platform/diagnostics-extension-windows-install.md
-                        - name: PowerShell
-                          href: ../virtual-machines/extensions/diagnostics-windows.md?toc=/azure/azure-monitor/toc.json
-                        - name: 资源管理器模板
-                          href: ../virtual-machines/extensions/diagnostics-template.md?toc=/azure/azure-monitor/toc.json
-                    - name: 发送到 Azure Monitor 指标存储
-                      items:
-                        - name: 虚拟机
-                          href: platform/collect-custom-metrics-guestos-resource-manager-vm.md
-                        - name: VM 规模集
-                          href: platform/collect-custom-metrics-guestos-resource-manager-vmss.md
-                        - name: VM 经典
-                          href: platform/collect-custom-metrics-guestos-vm-classic.md
-                        - name: 云服务
-                          href: platform/collect-custom-metrics-guestos-vm-cloud-service-classic.md
-                    - name: 发送到事件中心
-                      href: platform/diagnostics-extension-stream-event-hubs.md
-                    - name: 发送到日志
-                      href: platform/diagnostics-extension-logs.md
-                    - name: 发送到 Application Insights
-                      href: platform/diagnostics-extension-to-application-insights.md
-                    - name: 版本历史记录
-                      href: platform/diagnostics-extension-versions.md
-                    - name: 疑难解答
-                      href: platform/diagnostics-extension-troubleshooting.md
-                - name: Linux
-                  displayname: diagnostics extension
-                  items:
-                    - name: 概述
-                      href: ../virtual-machines/extensions/diagnostics-linux.md?toc=/azure/azure-monitor/toc.json
-                    - name: 使用 Telegraf 收集指标
-                      href: platform/collect-custom-metrics-linux-telegraf.md
-            - name: Log Analytics 代理
-              items:
-                - name: 概述
-                  href: platform/log-analytics-agent.md
-                - name: Windows 代理
-                  href: platform/agent-windows.md
-                - name: Linux 代理
-                  href: platform/agent-linux.md
-                - name: 适用于 Windows 的 VM 扩展
-                  href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
-                - name: 适用于 Linux 的 VM 扩展
-                  href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
-                - name: Log Analytics 网关
-                  href: platform/gateway.md
-                - name: 代理管理
-                  href: platform/agent-manage.md
-                - name: 代理运行状况
-                  href: insights/solution-agenthealth.md
-                - name: 数据源
-                  items:
-                    - name: 概述
-                      href: platform/agent-data-sources.md
-                    - name: Windows 事件
-                      href: platform/data-sources-windows-events.md
-                    - name: 自定义 JSON 数据
-                      href: platform/data-sources-json.md
-                    - name: CollectD 性能数据
-                      href: platform/data-sources-collectd.md
-                    - name: Syslog
-                      href: platform/data-sources-syslog.md
-                    - name: 性能计数器
-                      href: platform/data-sources-performance-counters.md
-                    - name: Linux 应用程序性能
-                      href: platform/data-sources-linux-applications.md
-                    - name: IIS 日志
-                      href: platform/data-sources-iis-logs.md
-                    - name: 自定义日志
-                      href: platform/data-sources-custom-logs.md
-                    - name: 自定义字段
-                      href: platform/custom-fields.md
-            - name: 疑难解答
-              items:
-                - name: Log Analytics VM 扩展
-                  displayname: 'troubleshoot, troubleshooting'
-                  href: platform/vmext-troubleshoot.md
-                - name: Log Analytics Windows 代理
-                  displayname: 'troubleshoot, troubleshooting'
-                  href: platform/agent-windows-troubleshoot.md
-                - name: Log Analytics Linux 代理
-                  displayname: 'troubleshoot, troubleshooting'
-                  href: platform/agent-linux-troubleshoot.md
-    - name: 平台日志
-      items:
-        - name: 概述
-          displayName: 'Platform logs, Resource logs, Activity log'
-          href: platform/platform-logs-overview.md
-        - name: 活动日志
-          href: platform/activity-log.md
-        - name: 资源日志
-          href: platform/resource-logs.md
-        - name: 诊断设置
-          displayName: 'Platform logs, Resource logs, Activity log'
-          href: platform/diagnostic-settings.md
-    - name: Log Analytics
-      items:
         - name: 日志查询概述
           displayname: 'log query, log queries, query, queries'
           href: log-query/log-query-overview.md
@@ -424,6 +325,135 @@
           href: platform/metric-chart-samples.md
         - name: 排查指标图表问题
           href: platform/metrics-troubleshoot.md
+    - name: 数据收集
+      items:
+        - name: 数据收集规则
+          href: platform/data-collection-rule-overview.md
+        - name: 自定义指标
+          items:
+            - name: 自定义指标
+              href: platform/metrics-custom-overview.md
+            - name: 指标 REST API
+              href: platform/metrics-store-custom-rest-api.md
+        - name: 自定义日志
+          items:
+            - name: Log Analytics 数据收集器 API
+              href: platform/data-collector-api.md
+            - name: Log Analytics 数据收集器 API 管道示例
+              href: platform/create-pipeline-datacollector-api.md
+        - name: 逻辑应用
+          items:
+            - name: Azure Monitor 日志连接器
+              href: platform/logicapp-flow-connector.md
+            - name: Application Insights 连接器
+              href: app/automate-with-logic-apps.md
+    - name: 代理
+      items:
+        - name: 概述
+          href: platform/agents-overview.md
+        - name: 常见问题解答
+          href: faq.md#agents
+        - name: Azure Monitor 代理
+          items:
+            - name: 概述
+              displayname: Azure Monitor agent
+              href: platform/azure-monitor-agent-overview.md
+            - name: 数据收集
+              displayname: 'data collection rule,Azure Monitor agent'
+              href: platform/data-collection-rule-azure-monitor-agent.md
+        - name: Azure 诊断扩展
+          items:
+            - name: 概述
+              href: platform/diagnostics-extension-overview.md
+            - name: Windows
+              displayname: diagnostics extension
+              items:
+                - name: 安装和配置
+                  items:
+                    - name: 安装选项
+                      href: platform/diagnostics-extension-windows-install.md
+                    - name: PowerShell
+                      href: ../virtual-machines/extensions/diagnostics-windows.md?toc=/azure/azure-monitor/toc.json
+                    - name: 资源管理器模板
+                      href: ../virtual-machines/extensions/diagnostics-template.md?toc=/azure/azure-monitor/toc.json
+                - name: 发送到 Azure Monitor 指标存储
+                  items:
+                    - name: 虚拟机
+                      href: platform/collect-custom-metrics-guestos-resource-manager-vm.md
+                    - name: VM 规模集
+                      href: platform/collect-custom-metrics-guestos-resource-manager-vmss.md
+                    - name: VM 经典
+                      href: platform/collect-custom-metrics-guestos-vm-classic.md
+                    - name: 云服务
+                      href: platform/collect-custom-metrics-guestos-vm-cloud-service-classic.md
+                - name: 发送到事件中心
+                  href: platform/diagnostics-extension-stream-event-hubs.md
+                - name: 发送到日志
+                  href: platform/diagnostics-extension-logs.md
+                - name: 发送到 Application Insights
+                  href: platform/diagnostics-extension-to-application-insights.md
+                - name: 版本历史记录
+                  href: platform/diagnostics-extension-versions.md
+                - name: 疑难解答
+                  href: platform/diagnostics-extension-troubleshooting.md
+            - name: Linux
+              displayname: diagnostics extension
+              items:
+                - name: 概述
+                  href: ../virtual-machines/extensions/diagnostics-linux.md?toc=/azure/azure-monitor/toc.json
+                - name: 使用 Telegraf 收集指标
+                  href: platform/collect-custom-metrics-linux-telegraf.md
+        - name: Log Analytics 代理
+          items:
+            - name: 概述
+              href: platform/log-analytics-agent.md
+            - name: Windows 代理
+              href: platform/agent-windows.md
+            - name: Linux 代理
+              href: platform/agent-linux.md
+            - name: 适用于 Windows 的 VM 扩展
+              href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
+            - name: 适用于 Linux 的 VM 扩展
+              href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
+            - name: Log Analytics 网关
+              href: platform/gateway.md
+            - name: 代理管理
+              href: platform/agent-manage.md
+            - name: 代理运行状况
+              href: insights/solution-agenthealth.md
+            - name: 数据源
+              items:
+                - name: 概述
+                  href: platform/agent-data-sources.md
+                - name: Windows 事件
+                  href: platform/data-sources-windows-events.md
+                - name: 自定义 JSON 数据
+                  href: platform/data-sources-json.md
+                - name: CollectD 性能数据
+                  href: platform/data-sources-collectd.md
+                - name: Syslog
+                  href: platform/data-sources-syslog.md
+                - name: 性能计数器
+                  href: platform/data-sources-performance-counters.md
+                - name: Linux 应用程序性能
+                  href: platform/data-sources-linux-applications.md
+                - name: IIS 日志
+                  href: platform/data-sources-iis-logs.md
+                - name: 自定义日志
+                  href: platform/data-sources-custom-logs.md
+                - name: 自定义字段
+                  href: platform/custom-fields.md
+        - name: 疑难解答
+          items:
+            - name: Log Analytics VM 扩展
+              displayname: 'troubleshoot, troubleshooting'
+              href: platform/vmext-troubleshoot.md
+            - name: Log Analytics Windows 代理
+              displayname: 'troubleshoot, troubleshooting'
+              href: platform/agent-windows-troubleshoot.md
+            - name: Log Analytics Linux 代理
+              displayname: 'troubleshoot, troubleshooting'
+              href: platform/agent-linux-troubleshoot.md
     - name: 自动缩放
       items:
         - name: 概述
@@ -432,7 +462,7 @@
           href: platform/autoscale-get-started.md
         - name: 配置设置
           href: platform/autoscale-understanding-settings.md
-        - name: 最佳实践
+        - name: 最佳做法
           href: platform/autoscale-best-practices.md
         - name: 常见指标
           href: platform/autoscale-common-metrics.md
@@ -848,7 +878,7 @@
               displayname: 'correlation, dependency, dependencies, track dependency, OWIN, queue, service bus, background tasks, long running background tasks, outgoing dependency tracking, parallel operations, System.Diagnostics.Activity, System.Diagnostics.DiagnosticSource, StartOperation, StopOperation'
             - name: 自定义电子邮件报告
               href: app/automate-custom-reports.md
-            - name: 异常
+            - name: 例外
               href: app/asp-net-exceptions.md
             - name: 日志跟踪
               href: app/asp-net-trace-logs.md
@@ -1148,29 +1178,6 @@
               href: log-query/dashboard-upgrade.md
         - name: 将数据发送到 Grafana
           href: platform/grafana-plugin.md
-    - name: 自定义数据收集和分析
-      items:
-        - name: 自定义指标
-          items:
-            - name: 自定义指标
-              href: platform/metrics-custom-overview.md
-            - name: 指标 REST API
-              href: platform/metrics-store-custom-rest-api.md
-        - name: 自定义日志
-          items:
-            - name: Log Analytics 数据收集器 API
-              href: platform/data-collector-api.md
-            - name: Log Analytics 数据收集器 API 管道示例
-              href: platform/create-pipeline-datacollector-api.md
-        - name: 逻辑应用
-          items:
-            - name: Azure Monitor 日志连接器
-              href: platform/logicapp-flow-connector.md
-            - name: Application Insights 连接器
-              href: app/automate-with-logic-apps.md
-        - name: REST API
-          displayname: 'metrics, analyze'
-          href: platform/rest-api-walkthrough.md
     - name: System Center 集成
       items:
         - name: 连接 Operations Manager
@@ -1274,6 +1281,9 @@
           href: /rest/api/monitor/
         - name: Azure Monitor 日志
           href: /rest/api/loganalytics
+        - name: REST API 演练
+          displayname: 'metrics, analyze'
+          href: platform/rest-api-walkthrough.md
     - name: 资源管理器模板
       items:
         - name: Azure Monitor
