--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -22,6 +22,8 @@
   items:
     - name: 手动扩缩应用
       href: spring-cloud-tutorial-scale-manual.md
+    - name: 自动缩放应用
+      href: spring-cloud-tutorial-setup-autoscale.md
     - name: 警报和操作组
       href: spring-cloud-tutorial-alerts-action-groups.md
     - name: 使用 IntelliJ 部署应用
@@ -38,8 +40,6 @@
       href: /azure/jenkins/tutorial-jenkins-deploy-cli-spring-cloud-service
     - name: 使用托管标识将 Key Vault 连接到 Azure Spring Cloud 应用
       href: spring-cloud-tutorial-managed-identities-key-vault.md
-    - name: 为微服务应用程序设置自动缩放功能
-      href: spring-cloud-tutorial-setup-autoscale.md
 - name: 示例
   items:
     - name: Azure Policy 内置策略定义
